log
Tue 26 Sep 2023 10:15:54 PM UTC: 
 tests:  0|4
total_score: 0/70
4c9ec14
Tue 26 Sep 2023 10:23:22 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8e2e156
Tue 26 Sep 2023 10:24:21 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0021ac4
Tue 26 Sep 2023 10:24:46 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 0/70
84b9cd8
